--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "portfolio",
   "version": "1.0.0",
   "description": "",
-  "main": "index.html",
+  "main": "portfolio.html",
   "scripts": {
     "start": "parcel index.html --open",
     "build": "parcel build index.html"
