--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "main": "portfolio.html",
   "scripts": {
-    "start": "parcel index.html --open",
-    "build": "parcel build index.html"
+    "start": "parcel portfolio.html --open",
+    "build": "parcel build portfolio.html"
   },
   "dependencies": {},
   "devDependencies": {
